examples/invalid/comment-unknown-key/src/ts/BrokenNotifier.ts
/**
 * @arch.node service broken-notifier
 * @arch.name Broken Notifier
 * @arch.domain notifications
 * @arch.owner team-commerce
 * @arch.foobar nope
 */
export class BrokenNotifier {}
